@@ -281,7 +281,7 @@
       "freedict_src_install"
       ;; ghc-package
       "check-for-collisions" "ghc-cabal-version" "ghc-confdir"
-      "ghc-extractportageversion" "ghc-getghc" "ghc-getghcpkgbin"
+      "ghc-extract-pm-version" "ghc-getghc" "ghc-getghcpkgbin"
       "ghc-install-pkg" "ghc-is-dynamic" "ghc-libdir" "ghc-localpkgconfd"
       "ghc-make-args" "ghc-package-db" "ghc-package-exists"
       "ghc-package_pkg_postinst" "ghc-package_pkg_postrm"
@@ -431,23 +431,21 @@
       "elibtoolize"
       ;; linux-info
       "check_extra_config" "check_kernel_built" "check_modules_supported"
-      "check_zlibinflate" "get_localversion" "get_makefile_extract_function"
-      "get_running_version" "get_version" "getfilevar" "getfilevar_noexec"
-      "kernel_get_makefile" "kernel_is" "linux-info_get_any_version"
-      "linux-info_pkg_setup" "linux_chkconfig_builtin"
-      "linux_chkconfig_module" "linux_chkconfig_present"
-      "linux_chkconfig_string" "linux_config_bin_exists" "linux_config_exists"
-      "linux_config_path" "linux_config_qa_check" "linux_config_src_exists"
-      "qeerror" "qeinfo" "qewarn" "qout" "require_configured_kernel"
-      "set_arch_to_kernel" "set_arch_to_portage"
+      "check_zlibinflate" "get_running_version" "get_version" "getfilevar"
+      "getfilevar_noexec" "kernel_get_makefile" "kernel_is"
+      "linux-info_get_any_version" "linux-info_pkg_setup"
+      "linux_chkconfig_builtin" "linux_chkconfig_module"
+      "linux_chkconfig_present" "linux_chkconfig_string"
+      "linux_config_bin_exists" "linux_config_exists" "linux_config_path"
+      "linux_config_src_exists" "qeerror" "qeinfo" "qewarn" "qout"
+      "require_configured_kernel" "set_arch_to_kernel" "set_arch_to_pkgmgr"
+      "set_arch_to_portage"
       ;; linux-mod
-      "check_vermagic" "convert_to_m" "find_module_params" "generate_modulesd"
-      "get-KERNEL_CC" "linux-mod_pkg_postinst" "linux-mod_pkg_postrm"
-      "linux-mod_pkg_preinst" "linux-mod_pkg_setup"
+      "convert_to_m" "get-KERNEL_CC" "linux-mod_pkg_postinst"
+      "linux-mod_pkg_postrm" "linux-mod_pkg_preinst" "linux-mod_pkg_setup"
       "linux-mod_pkg_setup_binary" "linux-mod_src_compile"
-      "linux-mod_src_install" "move_old_moduledb" "remove_moduledb"
-      "set_kvobj" "strip_modulenames" "update_depmod" "update_moduledb"
-      "use_m"
+      "linux-mod_src_install" "remove_moduledb" "set_kvobj"
+      "strip_modulenames" "update_moduledb" "use_m"
       ;; llvm
       "get_llvm_prefix" "llvm_pkg_setup"
       ;; llvm.org
@@ -611,7 +609,7 @@
       "qmail_tcprules_config" "qmail_tcprules_install"
       ;; qmake-utils
       "eqmake5" "qt5_get_bindir" "qt5_get_headerdir" "qt5_get_libdir"
-      "qt5_get_mkspecsdir" "qt5_get_plugindir"
+      "qt5_get_mkspecsdir" "qt5_get_plugindir" "qt5_get_qmake_args"
       ;; qt5-build
       "qt5-build_pkg_postinst" "qt5-build_pkg_postrm" "qt5-build_src_compile"
       "qt5-build_src_configure" "qt5-build_src_install"
